# SHAP-tutorial

./: pyproject.toml  requirements.txt
src/: kernel_vs_tree.ipynb  shap_tutorial.ipynb
src/additional_resources/: CatBoostClassifier.ipynb  IsolationForest.ipynb  RandomForestRegressor.ipynb
src/additional_resources/catboost_info/: catboost_training.json  time_left.tsv
src/additional_resources/catboost_info/learn/: events.out.tfevents
