[tool.poetry]
name = "shap-tutorial"
version = "0.1.0"
description = ""
authors = ["Edgar <pcdean2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
catboost = "1.1.1"
matplotlib = "3.5.1"
numpy = "1.23.3"
opencv-python = "4.6.0.66"
pandas = "1.5.0"
pillow = "9.2.0"
scikit-learn = "1.2.0"
seaborn = "0.12.2"
shap = "^0.46.0"
torch = "1.13.1"
torchvision = "0.14.1"
xgboost = "1.7.3"
ipywidgets = "^8.1.5"
ucimlrepo = "^0.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
